--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
 	"dependencies": {
 		"@babel/cli": "^7.6.2",
 		"@babel/core": "^7.6.2",
-		"@babel/polyfill": "^7.6.0",
 		"@babel/preset-env": "^7.6.2",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.0",
@@ -44,7 +43,14 @@
 	},
 	"babel": {
 		"presets": [
-			"@babel/preset-env"
+			[
+				"@babel/preset-env",
+				{
+					"targets": {
+						"node": true
+					}
+				}
+			]
 		]
 	},
 	"devDependencies": {
