--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -110,16 +110,17 @@
 
 		// Return inside each then() to create readable and reusable Promise chains.
 		// Forces developers to return console logs and http calls in promises.
-		"promise/always-return": 2,
+		"promise/always-return": "off",
 
 		//Enforces the use of catch() on un-returned promises
-		"promise/catch-or-return": 2,
+		"promise/catch-or-return": "off",
 
 		// Warn against nested then() or catch() statements
 		"promise/no-nesting": 1,
 		"no-plusplus": "off",
 		"no-return-assign": "off",
 		"no-tabs": "off",
-		"prefer-destructuring": "off"
+		"prefer-destructuring": "off",
+		"no-restricted-syntax": "off"
 	}
 }
