--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "Backend Repo for Venue Management App",
 	"main": "index.js",
 	"scripts": {
+		"start": "pm2 start build/index.js",
 		"dev": "nodemon --exec babel-node src/index.js",
 		"lint": "eslint --ignore-path .gitignore src/ --fix",
 		"prettier": "prettier --single-quote --trailing-comma es5 --print-width 85 --write --no-bracket-spacing src/**/*.js",
@@ -40,6 +41,7 @@
 		"morgan": "^1.9.1",
 		"pg": "^7.12.1",
 		"pg-hstore": "^2.3.3",
+		"pm2": "^4.1.2",
 		"sequelize": "^5.19.0"
 	},
 	"babel": {
@@ -61,6 +63,7 @@
 		"eslint": "^6.4.0",
 		"eslint-config-airbnb": "^18.0.1",
 		"eslint-config-prettier": "^6.3.0",
+		"eslint-plugin-import": "^2.18.2",
 		"eslint-plugin-promise": "^4.2.1",
 		"esm": "^3.2.25",
 		"mocha": "^6.2.0",
