--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
 	"description": "Backend Repo for Venue Management App",
 	"main": "index.js",
 	"scripts": {
-		"start": "pm2 start build/index.js",
+		"start": "node build/index.js",
 		"dev": "nodemon --exec babel-node src/index.js",
 		"lint": "eslint --ignore-path .gitignore src/ --fix",
 		"prettier": "prettier --single-quote --trailing-comma es5 --print-width 85 --write --no-bracket-spacing src/**/*.js",
-		"build": "npm run prebuild && babel src --out-dir build",
+		"build": "babel src --out-dir build",
 		"prebuild": "npm run lint && npm run clean && npm run prettier",
 		"clean": "rm -rf build/*",
 		"test": "mocha ./src/test -r esm --recursive -t 5000 --exit"
