--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@babel/preset-env": "^7.6.2",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.0",
+		"cloudinary": "^1.16.0",
 		"compression": "^1.7.4",
 		"date-fns": "^2.2.1",
 		"dotenv": "^8.1.0",
@@ -65,6 +66,7 @@
 		"eslint-config-airbnb": "^18.0.1",
 		"eslint-config-prettier": "^6.3.0",
 		"eslint-plugin-import": "^2.18.2",
+		"eslint-plugin-prettier": "^3.1.1",
 		"eslint-plugin-promise": "^4.2.1",
 		"esm": "^3.2.25",
 		"mocha": "^6.2.0",
