--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"date-fns": "^2.2.1",
 		"dotenv": "^8.1.0",
 		"express": "^4.17.1",
+		"express-fileupload": "^1.1.6-alpha.6",
 		"express-list-endpoints": "^4.0.1",
 		"express-validator": "^6.2.0",
 		"helmet": "^3.21.1",
