Implemented Mailing Service

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@babel/cli": "^7.6.2",
 		"@babel/core": "^7.6.2",
 		"@babel/preset-env": "^7.6.2",
+		"@sendgrid/mail": "^6.4.0",
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.19.0",
 		"cloudinary": "^1.16.0",
@@ -39,11 +40,9 @@
 		"express-fileupload": "^1.1.6-alpha.6",
 		"express-list-endpoints": "^4.0.1",
 		"express-validator": "^6.2.0",
-		"googleapis": "^45.0.0",
 		"helmet": "^3.21.1",
 		"jsonwebtoken": "^8.5.1",
 		"morgan": "^1.9.1",
-		"nodemailer": "^6.3.1",
 		"pg": "^7.12.1",
 		"pg-hstore": "^2.3.3",
 		"pm2": "^4.1.2",
