--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"dev": "nodemon --exec babel-node src/index.js",
 		"lint": "eslint --ignore-path .gitignore src/ --fix",
 		"prettier": "prettier --single-quote --trailing-comma es5 --print-width 85 --write --no-bracket-spacing src/**/*.js",
-		"build": "babel src --out-dir build",
+		"build": "babel src --out-dir build --copy-files",
 		"prebuild": "npm run lint && npm run clean && npm run prettier",
 		"clean": "rm -rf build/*",
 		"test": "mocha -r @babel/register --recursive -t 10000 --exit",
