--- a/.env.travis
+++ b/.env.travis
@@ -1,5 +1,6 @@
-NODE_ENV=staging
+NODE_ENV=testing
 DATABASE_URL=postgres://root:password@localhost:5432/travis
 PORT=4000
 JWT_SECRET=05cddb4264eebdd6988dffc5456da628
 CLOUDINARY_URL=cloudinary://156781836396987:_7M7ytov6dakhMWsygseIa1nCuM@alphex-code-ltd
+DEBUG=venue/*
